<resources>
    <string name="app_name">LetsRun</string>
    <string name="choose_race">Choose Your Race</string>
    <string name="race_5k">5K</string>
    <string name="race_10k">10K</string>
    <string name="race_15k">15K</string>
    <string name="race_halfmarathon">Half-Marathon</string>
    <string name="race_marathon">Marathon</string>
    <string name="chose_weeks">How many weeks would you like to train for?</string>
    <string name="chose_days">How many days per week would you like to train for?</string>

    <string name="plan_overview_title">Plan Overview</string>
    <string name="day_overview_title">Day Overview</string>
    <string name="stats_title">Stats Overview</string>
    <string name="map_title">Map From Workout</string>
    <string name="race_setup">Race Set Up</string>
    <string name="week6">6</string>
    <string name="week8">8</string>
    <string name="week10">10</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
