<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="heenan.runningapp.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:weightSum="1">

        <Button
            android:id="@+id/chose_5k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_5k"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/chose_10k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_10k"
            android:layout_weight="0.1"/>

        <Button
            android:id="@+id/chose_15k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_15k"
            android:layout_weight="0.1"/>

        <Button
            android:id="@+id/chose_halfmarathon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_halfmarathon"
            android:layout_weight="0.1"/>

        <Button
            android:id="@+id/chose_marathon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_marathon"
            android:layout_weight="0.1"/>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
