<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_day_overview_completed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="heenan.runningapp.DayOverview">


    <LinearLayout

        android:id="@+id/days_planoverview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="12dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_overview_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/race_5k"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/walk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_5k"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_5k"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/race_5k"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats_title"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/race_5k"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/avg_walking_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_5k"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/avg_running_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/race_5k"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_title"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/map_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/default_map"
                />

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>